# cpp_template

./: .gitignore  CMakeLists.txt  README.md  dev  format-hook
.devcontainer/: Dockerfile  devcontainer.json
docker/: .dockerignore  ClangDocker  CustomDockerfile  Dockerfile
src/hello_world/: CMakeLists.txt  main.cpp
